@@ -55,6 +55,10 @@ Release 0.22b.dev (unpublished)
     follows a <meta> or <decoration> element as this is invalid
     according to ``docutils.dtd``.
 
+* docutils/transforms/references.py
+
+  - Make `AnonymousHyperlinks` transform idempotent.
+
 * docutils/transforms/universal.py
 
   - `Messages` also handles "loose" system messages generated by the parser.
@@ -70,7 +74,6 @@ Release 0.22b.dev (unpublished)
 
   - Do not increase indentation of follow-up lines inside inline elements.
     when formatting with `indents`_.
-
 
 
 Release 0.21.2 (2024-04-23)
